@@ -26,6 +26,7 @@ import org.apache.solr.handler.component.ShardRequest;
 import org.apache.solr.handler.component.ShardResponse;
 import org.apache.solr.search.SortSpec;
 import org.apache.solr.search.grouping.distributed.ShardResponseProcessor;
+import org.apache.solr.search.grouping.distributed.command.Pair;
 import org.apache.solr.search.grouping.distributed.shardresultserializer.SearchGroupsResultTransformer;
 
 import java.io.IOException;
@@ -62,9 +63,17 @@ public class SearchGroupShardResponseProcessor implements ShardResponseProcessor
         maxElapsedTime = (int) Math.max(maxElapsedTime, srsp.getSolrResponse().getElapsedTime());
         @SuppressWarnings("unchecked")
         NamedList<NamedList> firstPhaseResult = (NamedList<NamedList>) srsp.getSolrResponse().getResponse().get("firstPhase");
-        Map<String, Collection<SearchGroup<String>>> result = serializer.transformToNative(firstPhaseResult, groupSort, null, srsp.getShard());
+        Map<String, Pair<Integer, Collection<SearchGroup<String>>>> result = serializer.transformToNative(firstPhaseResult, groupSort, null, srsp.getShard());
         for (String field : commandSearchGroups.keySet()) {
-          Collection<SearchGroup<String>> searchGroups = result.get(field);
+          Pair<Integer, Collection<SearchGroup<String>>> firstPhaseCommandResult = result.get(field);
+          Integer groupCount = firstPhaseCommandResult.getA();
+          if (groupCount != null) {
+            Integer existingGroupCount = rb.mergedGroupCounts.get(field);
+            // Assuming groups don't cross shard boundary...
+            rb.mergedGroupCounts.put(field, existingGroupCount != null ? existingGroupCount + groupCount : groupCount);
+          }
+
+          Collection<SearchGroup<String>> searchGroups = firstPhaseCommandResult.getB();
           if (searchGroups == null) {
             continue;
           }
