@@ -33,6 +33,9 @@ Bug Fixes:
 
 * SOLR-3375: Fix charset problems with HttpSolrServer (Roger Håkansson, yonik, siren)
 
+* SOLR-3436: Group count incorrect when not all shards are queried in the second
+  pass. (Francois Perron, Martijn van Groningen)
+
 ==================  3.6.0  ==================
 More information about this release, including any errata related to the 
 release notes, upgrade instructions, or other changes may be found online at:
